--- a/public/vistas/ALQUILER/ALQUILER.html
+++ b/public/vistas/ALQUILER/ALQUILER.html
@@ -3,7 +3,7 @@
 
         <div class="card text-white bg-dark mb-3" style="max-width: 24rem;">
             <div class="card-header">
-                Mantenimiento Docentes
+                REGISTRO DE ALQUILER
     
                 <button type="button" class="close" id="close-docentes" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
