--- a/inicio.html
+++ b/inicio.html
@@ -34,54 +34,13 @@
         <li class="nav-item">
             <a id="CLIENTES" class="nav-link mostrar" data-modulo="CLIENTES" href="#">REGISTRO CLIENTES</a>
         </li> 
-    
-        <li><a href="#">PELICULAS</a>
-        <div>
-            <ul>
-                <li class="titulo"><a href="">SUPER HEROES</a></li>
-                <li><a href="">BATMAN</a></li>
-                <li><a href="">MUJER MARAVILLA</a></li>
-                <li><a href="">AIROMAN</a></li>
-                <li><a href="">EL SORPRENDETE HOMBRE ARAÑA</a></li>
-                <li><a href="">CAPITAN AMERICA</a></li>
-                <li><a href="">AVERGER</a></li>
-            </ul>
-            <ul>
-                <li class="titulo azul"><a href="">ACCION</a></li>
-                <li><a href="">TERMINSTOR</a></li>
-                <li><a href="">SALVANDO AL SOLDADO RYAN</a></li>
-                <li><a href="">MATRIX</a></li>
-                <li><a href="">DEPREDADOR</a></li>
-                <li><a href="">ALIENS VS DEPREDADOR</a></li>
-            </ul>
-            <ul>
-                <li class="titulo verde"><a href="">TERROR</a></li>
-                <li><a href="">EL EXORCISTA</a></li>
-                <li><a href="">IT EL PAYASO</a></li>
-                <li><a href="">LA PURGA</a></li>
-                <li><a href="">DESTINO FINAL</a></li>
-                <li><a href="">CHUKY</a></li>
-                <li><a href="">DULCE VENGANZA</a></li>
-            </ul>
-            <ul>
-                <li class="titulo rojo"><a href="">AVENTURA</a></li>
-                <li><a href="">PIRATAS DEL CARIBE</a></li>
-                <li><a href="">EL SEÑOR DE LOS ANILLOS</a></li>
-                <li><a href="">HARRY POTTER</a></li>
-                <li><a href="">PARQUE JURASICO</a></li>
-                <li><a href="">PARQUE JURASICO 2 EL REGRESO</a></li>
-            </ul>
-            <ul>
-                <li class="titulo naranja"><a href="">ROMANCE</a></li>
-                <li><a href="">DIARIO DE UNA PASION</a></li>
-                <li><a href="">TITANIC</a></li>
-                <li><a href="">ORGULLO Y PREJUICIO</a></li>
-                <li><a href="">COMO SI FUERA LA PRIMERA VEZ</a></li>
-            </ul>
-        </div>
         <li class="nav-item">
         <a id="ALQUILER" class="nav-link mostrar" data-modulo="ALQUILER" href="#">ALQUILER DE PELICULAS</a>
         </li>   
+
+        <li class="nav-item">
+          <a id="PELICULAS" class="nav-link mostrar" data-modulo="PELICULAS" href="#">PELICULAS</a>
+          </li>   
     </ul> 
     </nav>
       <div class="modulos" id="vista-CLIENTES"></div>
