--- a/public/vistas/ALQUILER/ALQUILER.html
+++ b/public/vistas/ALQUILER/ALQUILER.html
@@ -1,66 +1,50 @@
 
-    <form v-on:submit.prevent="guaradarDocentes" id="frmDocentes" data-accion="nuevo" data-iddocente='' method="GET">
+    <form v-on:submit.prevent="guaradarALQULER" id="frmALQUILER" data-accion="nuevo" data-idALQUILER='' method="GET">
 
-        <div class="card text-white bg-dark mb-3" style="max-width: 24rem;">
+        <div class="card text-white bg-secondary mb-4" style="max-width: 26rem;">
             <div class="card-header">
-                REGISTRO DE ALQUILER
+                 ALQUILER
     
-                <button type="button" class="close" id="close-docentes" aria-label="Close">
+                <button type="button" class="close" id="close-ALQUILER" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="card-body">
                 <div class="row p-2">
                     <div class="col-4">
-                        CODIGO
+                        FECHA DE PRESTAMO
                     </div>
                     <div class="col-8">
-                        <input type="text" v-model="docentes.codigo" id="txtCodigoDocente" placeholder="AAA AAA" class="form-control">
+                        <input type="text" v-model="ALQUILER.FECHA" id="txtFECHAALQUILER" placeholder="0000-0000" class="form-control">
                     </div>
                 </div>
                 <div class="row p-2">
                     <div class="col-4">
-                        NOMBRE
+                        FECHA DE DEVOLUCION
                     </div>
                     <div class="col-8">
-                        <input type="text" v-model="docentes.nombre" id="txtNombreDocente" placeholder="AAA AAA" class="form-control">
+                        <input type="text" v-model="ALQUILER.DEVOLUCION" id="txtDEVOLUCIONALQUILER" placeholder="0000-0000" class="form-control">
                     </div>
                 </div>
                 <div class="row p-2">
                     <div class="col-4">
-                        DIRECCION
+                        VALOR
                     </div>
                     <div class="col-8">
-                        <input type="text" v-model="docentes.direccion" id="txtDireccionDocente" placeholder="AAA" class="form-control">
-                    </div>
-                </div>
-                <div class="row p-2">
-                    <div class="col-4">
-                        TEL
-                    </div>
-                    <div class="col-8">
-                        <input type="text" v-model="docentes.telefono" id="txtTelefonoDocente" placeholder="0000-0000" class="form-control">
-                    </div>
-                </div>
-                <div class="row p-2">
-                    <div class="col-4">
-                        NIT
-                    </div>
-                    <div class="col-8">
-                        <input type="text"  v-model="docentes.NIT" id="txtNITDocente" placeholder="0101-010101-101-1" class="form-control">
+                        <input type="text" v-model="ALQUILER.VALOR" id="txtVALORALQUILER" placeholder="0000-0000" class="form-control">
                     </div>
                 </div>
                 <div class="row p-2"> 
                     <div class="col-12 text-center">
-                        <input id="btnGuardarDocentes" type="submit" class="btn btn-outline-primary text-white" value="Guardar">
+                        <input id="btnGuardarALQUILER" type="submit" class="btn btn-outline-primary text-white" value="Guardar">
                         <input type="reset" class="btn btn-outline-warning text-white" value="Limpiar">
-                        <input v-on:click="buscarDocentes" type="button" class="btn btn-outline-success mostrar-buscar-alumnos text-white" data-modulo="docentes" data-form="buscar-docentes" value="Buscar">
+                        <input v-on:click="buscarALQUILER" type="button" class="btn btn-outline-success mostrar-buscar-ALQUILER text-white" data-modulo="ALQUILER" data-form="buscar-ALQUILER" value="Buscar">
                     </div>
                 </div>
                 <div class="row p-2">
                     <div class="col-12 text-center">
                         <div class="alert alert-success" role="alert">
-                            {{ docentes.msg }}
+                            {{ ALQUILER.msg }}
                         </div>
                     </div>
                 </div>
@@ -68,4 +52,4 @@
         </div>
     </form> 
 
-    <script src="public/vistas/docentes/docentes.js"></script>
+    <script src="public/vistas/ALQUILER/ALQUILER.js"></script>
