--- a/inicio.html
+++ b/inicio.html
@@ -45,6 +45,10 @@
     </nav>
       <div class="modulos" id="vista-CLIENTES"></div>
       <div class="modulos" id="modulo-vista-CLIENTES"></div>
+
+      <div class="modulos" id="vista-PELICULAS"></div>
+      <div class="modulos" id="modulo-vista-PELICULAS"></div>
+
       <div class="modulos" id="vista-ALQUILER"></div>
       <div class="modulos" id="modulo-vista-ALQUILER"></div>
 
